# flat-screen-to-vr-test-dont-download-not-functional-

./: CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md
profiles/: default_vr.json
src/: dllmain.cpp
src/core/: config.cpp  config.h  logging.cpp  logging.h  perf_monitor.cpp  perf_monitor.h  types.h
src/hook/: dx11_hook.cpp  dx11_hook.h  dx12_hook.cpp  dx12_hook.h  hook_manager.cpp  hook_manager.h
src/input/: input_mapper.cpp  input_mapper.h  input_proxy.cpp  input_proxy.h  xr_input.cpp  xr_input.h
src/overlay/: config_editor.cpp  config_editor.h  imgui_overlay.cpp  imgui_overlay.h
src/proxy/: d3d11_proxy.cpp  d3d11_proxy.def
src/render/: camera_rig.cpp  camera_rig.h  depth_reprojection.cpp  depth_reprojection.h  latency_compensator.cpp  latency_compensator.h  stereo_renderer.cpp  stereo_renderer.h
src/render/shaders/: depth_reprojection.hlsl  stereo_projection.hlsl
src/vr/: openxr_context.cpp  openxr_context.h  tracking.cpp  tracking.h
test_app/: imgui.ini  minimal_test.cpp  test_app.cpp  test_app_preload.cpp  test_d3d12.cpp
test_minimal/: minimal.cpp  minimal.exp  minimal.lib
tests/: test_app.cpp  test_d3d12.cpp
tools/: build.bat  build.ps1  check_forwarders.py  configure.ps1  injector.cpp  injector.py
